Fri Oct 23 19:53:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DDS_release_notes.txt:
        * README:
          
          Updated documentation for next release.

Wed Oct 21 17:34:45 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/idl2jni_visitor.h:
        * java/idl2jni/codegen/idl2jni_visitor.cpp:

          Remoted temporary forward decls in ast_visitor impl; obviated
          by TAO 1.7.4 release.

Tue Oct 20 01:36:51 UTC 2009  Scott Harris  <harris_s@ociweb.com>

        * performance-tests/DCPS/TCPProfilingTest/raw_tcp/publisher/TestDriver.h

          Fix build against SunCC with STLport.

Fri Oct 16 18:35:38 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest4/Reader.cpp:

          Fixed access violation on zero length SampleInfoSeq
          returned from read_next_instance or take_next_instance.

Tue Oct 13 22:45:56 UTC 2009  Scott Harris  <harris_s@ociweb.com>

        * tests/DCPS/FooTest3_0/PubDriver.cpp

          Update test per default DataWriter ReliablityQos fix.

Fri Oct  9 20:49:09 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Fixed default DataWriter ReliablityQos policy; default is now RELIABLE
          (reported by Scott Harris).

Wed Oct  7 16:07:02 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/Subscriber.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/Subscriber.cpp:

          Updates to the Developer's Guide examples to make them
          more consistent with the OpenDDS 2.0 DevGuide.

        * dds/DCPS/DataReaderImpl.cpp:

          Clean up an ACE_DEBUG message.

Mon Oct  5 22:34:17 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds/dcps_java_optional.mpb:

          More adjustments for Windows builds.
