@@ -1,8 +1,8 @@
-This is OpenDDS version 2.0, released Wed Sep 23 15:56:51 UTC 2009.
+This is OpenDDS version 2.0.1, released Fri Oct 23 19:58:26 UTC 2009.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 2.0
+    OpenDDS VERSION: 2.0.1
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
