@@ -1,4 +1,4 @@
-This is OpenDDS version 2.0, released Wed Sep 23 15:56:51 UTC 2009.
+This is OpenDDS version 2.0.1, released Fri Oct 23 19:58:26 UTC 2009.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
