@@ -1,8 +1,12 @@
+Fri Oct 23 19:58:26 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * OpenDDS version 2.0.1 released.
+
 Fri Oct 23 19:53:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * DDS_release_notes.txt:
         * README:
-          
+
           Updated documentation for next release.
 
 Wed Oct 21 17:34:45 UTC 2009  Steven Stallion  <stallions@ociweb.com>
